--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-gzip": "^1.4.2",
     "gulp-tar": "^2.1.0",
     "parcel-bundler": "^1.7.0",
+    "parcel-plugin-typescript": "^1.0.0",
     "typescript": "^2.8.1"
   },
   "dependencies": {
