--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp": "^3.9.1",
     "gulp-gzip": "^1.4.2",
     "gulp-tar": "^2.1.0",
+    "gulp-typescript": "^5.0.0-alpha.3",
     "parcel-bundler": "^1.7.0",
     "parcel-plugin-typescript": "^1.0.0",
     "typescript": "^2.8.1"
