--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,9 @@
 /build/**/*.js
 /build/**/*.ts
 /build/**/*.d.ts
-/src/**/*.js
-/src/**/*.d.ts
+/build/**/*.map
+# /src/**/*.js
+# /src/**/*.d.ts
 /build/*.gz
 /dist-server
 /tmp
