--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "parcel serve index.html -p 1256 --open",
     "build": "cross-env NODE_ENV=production parcel build src/index.ts --detailed-report --out-dir build --out-file index.js --no-source-maps",
     "build:node": "cross-env NODE_ENV=production parcel build src/index.ts --target node --detailed-report --out-dir build --out-file node.js",
-    "build:ngzip": "tsc -p tsconfig.json --outDir build/tar/ws && gulp ngzip"
+    "build:ngzip": "tsc -p tsconfig.json --outDir build/tar/ws && gulp ngzip",
+    "publish:release": "tsc -p tsconfig.json --outDir build/tar/ws"
   },
   "keywords": [],
   "author": "meng",
